--- a/src/main/webapp/fotos.html
+++ b/src/main/webapp/fotos.html
@@ -20,10 +20,11 @@
     <script type="text/ng-template" id="templateId">
 
         <div >
-            <img src="images/gallery/{{itemCorrente.foto}}" style=" padding: 5px 20px 5px 20px; align-items: center;"
+            <img src="images/gallery/{{itemCorrente.foto}}" style=" padding: 5px 20px 5px 20px; align-items: center; max-width: none;"
                  class="img-responsive"/>
             <p style="padding-left: 20px;">{{itemCorrente.titulo}}</p>
         </div>
+
     </script>
 
 </div>
