--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,8 @@
 		<link href="css/ngDialog.css" rel="stylesheet" type="text/css" media="all">
 		<link href="css/ngDialog-theme-default.min.css" rel="stylesheet" type="text/css" media="all">
 
+		<link href="css/ngDialog-Modificado.css" rel="stylesheet" type="text/css" media="all">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="keywords" content="Latinoware Software Livre Cerveja Festa Bebida" />
